[package]
name = "vru-cancel"
version = "0.1.2"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2021"
rust-version = "1.58.1"
license = "MIT"
description = "Cancel tokio stream"
repository = "https://github.com/vlad9486/vru-cancel.git"
keywords = ["async", "stream", "tokio"]
categories = ["asynchronous", "rust-patterns"]

[dependencies]
pin-project-lite = { version = "0.2.13" }
tokio = { version = "1.32.0", features = ["sync"] }
tokio-stream = { version = "0.1.14", default-features = false }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["rt", "time", "macros", "sync", "signal"] }
